change .pickle to .pkl

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Very-Very-Orienteering Map Generator
 ====================================
 
-This is a Very-Very-Orienteering Map Generator. If you don't know these kind of
+This is a very-very-orienteering map generator. If you don't know these kind of
 orienteering training: Try it out! It's fun!
 
 It works like an window or compass orienteering with rotated windows. That means
